--- a/.github/workflows/release-dev.yml
+++ b/.github/workflows/release-dev.yml
@@ -43,7 +43,7 @@ jobs:
         id: show_version
         run: cat version.properties
       - name: Delete previous tag and release
-        uses: ClementTsang/delete-tag-and-release@v0.4.0
+        uses: tychobrailleur/delete-tag-and-release@71d16bced8
         with:
           delete_release: true
           tag_name: ${{ steps.read_version_properties.outputs.tag }}
@@ -73,7 +73,7 @@ jobs:
           --data '{ "draft": false }'
       - name: If not dev-release delete previous short version tag
         if: ${{ steps.read_version_properties.outputs.tag != 'dev' }}
-        uses: ClementTsang/delete-tag-and-release@v0.4.0
+        uses: tychobrailleur/delete-tag-and-release@71d16bced8
         with:
           delete_release: true
           tag_name: ${{ steps.read_version_properties.outputs.shortVersion }}
