--- a/.github/workflows/release-dev.yml
+++ b/.github/workflows/release-dev.yml
@@ -43,9 +43,10 @@ jobs:
         id: show_version
         run: cat version.properties
       - name: Delete previous tag and release
-        uses: tychobrailleur/delete-tag-and-release@71d16bced8
+        uses: tychobrailleur/delete-tag-and-release@71d16bced8e2014c0a4340d36bfae3d50f756605
         with:
           delete_release: true
+          delete_non_draft: true
           tag_name: ${{ steps.read_version_properties.outputs.tag }}
         env:
           GITHUB_TOKEN: ${{ secrets.RELEASE_TOKEN }}
@@ -73,9 +74,10 @@ jobs:
           --data '{ "draft": false }'
       - name: If not dev-release delete previous short version tag
         if: ${{ steps.read_version_properties.outputs.tag != 'dev' }}
-        uses: tychobrailleur/delete-tag-and-release@71d16bced8
+        uses: tychobrailleur/delete-tag-and-release@71d16bced8e2014c0a4340d36bfae3d50f756605
         with:
           delete_release: true
+          delete_non_draft: true
           tag_name: ${{ steps.read_version_properties.outputs.shortVersion }}
         env:
           GITHUB_TOKEN: ${{ secrets.RELEASE_TOKEN }}
