fix: property 'window.about.text': adding homogeneous line break after the first sentence in all language files and correcting the years in danish

--- a/src/main/resources/sprache/Catalan.properties
+++ b/src/main/resources/sprache/Catalan.properties
@@ -1414,7 +1414,7 @@ ls.menu.help.about = Quant a
 # About window from Top menu Help->About:  Title
 window.about.title = Crèdits
 # About window from Top menu Help->About:  Text
-window.about.text = El desenvolupament va començar el 2003 per part de Thomas Werth & Volker Fischer. Des de 2006, aquest projecte és de codi obert i desenvolupat per diferents desenvolupadors.
+window.about.text = El desenvolupament va començar el 2003 per part de Thomas Werth & Volker Fischer.\nDes de 2006, aquest projecte és de codi obert i desenvolupat per diferents desenvolupadors.
 # About window from Top menu Help->About:  Text
 window.about.licence = Llicència
 ls.button.update.linux.pkg.warning = Estàs executant HO a través d'un paquet instal·lat al teu sistema. Si actualitzes HO a través d'aquesta interfície, el teu sistema no serà informat de l'actualització del programa. \nPer tant, existirà una discrepància entre la versió de HO informada pel teu sistema i la que efectivament està instal·lada i en ús (en el cas que calgui una nova dependència de Java, el teu sistema no la instal·larà automàticament).\nNo obstant, això no hauria de tenir conseqüències i en cas de problemes sempre tindràs la possibilitat d'instal·lar/actualitzar HO a sobre de la instal·lació existent usant un paquet.\nEncara vols continuar?
