--- a/src/main/resources/sprache/Czech.properties
+++ b/src/main/resources/sprache/Czech.properties
@@ -1449,7 +1449,7 @@ ls.menu.help.about = O projektu
 # About window from Top menu Help->About:  Title
 window.about.title = Credits
 # About window from Top menu Help->About:  Text
-window.about.text = 2003 Thomas Werth a Volker Fischer začali s vývojem. Od roku 2006 je tento projekt open source a je vyvíjen různými vývojáři.
+window.about.text = 2003 Thomas Werth a Volker Fischer začali s vývojem.\nOd roku 2006 je tento projekt open source a je vyvíjen různými vývojáři.
 # About window from Top menu Help->About:  Text
 window.about.licence = Licence
 ls.button.update.linux.pkg.warning = HO jste nainstalovali pomocí instalačního balíčku ve Vašem systému\nPokud takto updateujete HO, Váš systém nebude informován o nových HO updatech.\nMůže se tedy stát, že verze, kterou HO bude ukazovat, nebude odpovídat reálně nainstalované a používané verzi (pokud bude potřeba povýšit Javu, Váš systém to neudělá sám).\nNicméně program bude fungovat a v případě problému máte vždy možnost nainstalovat/updateovat HO balíčkovým instalátorem.\nChcete přesto pokračovat?
