--- a/src/main/resources/sprache/Danish.properties
+++ b/src/main/resources/sprache/Danish.properties
@@ -1451,7 +1451,7 @@ ls.menu.help.about = Om
 # About window from Top menu Help->About:  Title
 window.about.title = Credits
 # About window from Top menu Help->About:  Text
-window.about.text = I 2013 startede programudviklingen af Thomas Werth og Volker Fischer. Siden 2016 har HO fungeret som opensource projekt og videreudviklet med skiftende programmører.
+window.about.text = I 2003 startede programudviklingen af Thomas Werth og Volker Fischer.\nSiden 2006 har HO fungeret som opensource projekt og videreudviklet med skiftende programmører.
 # About window from Top menu Help->About:  Text
 window.about.licence = Licens
 ls.button.update.linux.pkg.warning = Du kører HO via en pakkeinstallation på din maskine. Hvis du opdaterer HO via dette interface, bliver dit system ikke informeret omkring programopdateringen. Derfor vil der være en uoverensstemmelse mellem HO versionerne der hhv. er installeret og i brug (i tilfælde af en Java opdatering er påkrævet, vil din maskine ikke automatisk installere denne).\nDet bør dog som udgangspunkt ikke have nogle konsekvenser – men i tilfælde af problemer vil du altid have mulighed for at opdatere din HO via en ny pakkeinstallation.\nVil du stadig fortsætte
