--- a/src/main/resources/sprache/Deutsch.properties
+++ b/src/main/resources/sprache/Deutsch.properties
@@ -1438,7 +1438,7 @@ ls.menu.help.about = Über
 # About window from Top menu Help->About:  Title
 window.about.title = Credits
 # About window from Top menu Help->About:  Text
-window.about.text = 2003 begann die Entwicklung durch Thomas Werth & Volker Fischer. Seit 2006 ist dies ein Open Source Projekt und wird von wechselnden Entwicklern weiter entwickelt.
+window.about.text = 2003 begann die Entwicklung durch Thomas Werth & Volker Fischer.\nSeit 2006 ist dies ein Open Source Projekt und wird von wechselnden Entwicklern weiter entwickelt.
 # About window from Top menu Help->About:  Text
 window.about.licence = Lizenz
 ls.button.update.linux.pkg.warning = Der HO läuft über ein Paket, das in Deinem System installiert wurde. Falls Du den HO über diese Funktion updatest, wird Dein System hierüber nicht informiert. Deshalb wird es eine Diskrepanz zwischen der Version des HO geben, die Dein System angibt und der Version, die effektiv installiert und in Benutzung ist (falls für das Update eine neue Java Version benötigt wird, wird Dein System das Update nicht automatisch ausführen). Das sollte aber keine besonderen Folgen haben. Im Fall eines Problems bleibt Dir immer die Möglichkeit, den HO statt über diese Funktion über ein neues Paket herunterzuladen, mit dem Du die bisherige Version überschreibst.
