--- a/src/main/resources/sprache/Greeklish.properties
+++ b/src/main/resources/sprache/Greeklish.properties
@@ -1428,7 +1428,7 @@ ls.menu.help.about = Sxetika
 # About window from Top menu Help->About:  Title
 window.about.title = Efxaristies
 # About window from Top menu Help->About:  Text
-window.about.text = H anaptyxh toy programmatos arxise to 2003 apo toys Thomas Werth & Volker Fischer. Apo to 2006 to project einai open source kai anaptyssete apo diaforetikoys programmatistes.
+window.about.text = H anaptyxh toy programmatos arxise to 2003 apo toys Thomas Werth & Volker Fischer.\nApo to 2006 to project einai open source kai anaptyssete apo diaforetikoys programmatistes.
 # About window from Top menu Help->About:  Text
 window.about.licence = Adeia
 ls.button.update.linux.pkg.warning = Trexete to HO apo ena paketo poy egkatastathike sto systhma sas. An kanete update me ton idio tropo, to systhma sas de tha plhroforhthei thn allagh.\nEtsi, tha yparxei diafora metaxy ths ekdoshs toy systhmatos kai ths pragmatikhs (se periptwsh poy xreazetai neo Java, to systhma sas den tha to egkatasthsei aytomata).\nParola ayta den tha yparxoyn synepeies kai an yparxei kapoio problhma mporeite na kanete egkatastash/enhmerwsh panw apo to yparxwn programma.\nThelete na synexisete
