--- a/src/main/resources/sprache/Hrvatski(Croatian).properties
+++ b/src/main/resources/sprache/Hrvatski(Croatian).properties
@@ -1428,7 +1428,7 @@ ls.menu.help.about = About
 # About window from Top menu Help->About:  Title
 window.about.title = Credits
 # About window from Top menu Help->About:  Text
-window.about.text = Thomas Werth & Volker Fischer su 2003 započeli razvoj. Od 2006 ovaj projekt je otvorenog koda (open source) i razvija se od strane developera koji se često izmijenjuju. 
+window.about.text = Thomas Werth & Volker Fischer su 2003 započeli razvoj.\nOd 2006 ovaj projekt je otvorenog koda (open source) i razvija se od strane developera koji se često izmijenjuju. 
 # About window from Top menu Help->About:  Text
 window.about.licence = Licenca
 ls.button.update.linux.pkg.warning = You are running HO via a package installed in your system.\nIf you update HO via this interface, your system will not be informed of the program update.\nHence, a discrepancy will exists between the version of HO reported by your system and\nthe one effectively installed and in use (in case new Java dependency is required,\nyour system won’t install them automatically).\nThis should however have no consequences and in case of problem\nyou will always have the possibility to install/update HO over your existing install using a package.\nDo you still want to continue
