--- a/src/main/resources/sprache/Polish.properties
+++ b/src/main/resources/sprache/Polish.properties
@@ -1415,7 +1415,7 @@ ls.menu.help.about = O programie
 # About window from Top menu Help->About:  Title
 window.about.title = Twórcy
 # About window from Top menu Help->About:  Text
-window.about.text = W 2003 pracę nad programem rozpoczęli Thomas Werth i Volker Fischer. W 2006 projekt stał się open source i od tego czasu był rozwijany przez wielu programistów.
+window.about.text = W 2003 pracę nad programem rozpoczęli Thomas Werth i Volker Fischer.\nW 2006 projekt stał się open source i od tego czasu był rozwijany przez wielu programistów.
 # About window from Top menu Help->About:  Text
 window.about.licence = Licencja
 ls.button.update.linux.pkg.warning = Używasz HO zainstalowanego przy użyciu menedżera pakietów.\nJeżeli użyjesz tej funkcji do aktualizacji Twój system nie zostanie powiadomiony.\nW związku z tym dojdzie do nieścisłości pomiędzy wersją faktycznie zainstalowaną a tą która zna (może to wpłynąć na automatyczne instalowanie zależności).\nZwykle nie powinno to pociągać za sobą konsekwencji. W razie problemów zawsze możesz nadpisać instalacje na tej instalacji używając menedżera pakietów.\nCzy nadal chcesz kontynuować?
