--- a/src/main/resources/sprache/Slovak.properties
+++ b/src/main/resources/sprache/Slovak.properties
@@ -1449,7 +1449,7 @@ ls.menu.help.about = O
 # About window from Top menu Help->About:  Title
 window.about.title = Kredity
 # About window from Top menu Help->About:  Text
-window.about.text = Vyvoj zacal v 2003 Thomasom Werthom & Volkerom Fischerom. Od 2006 je projekt otvoreny a vyvyijany zmenami vyvojarov.
+window.about.text = Vyvoj zacal v 2003 Thomasom Werthom & Volkerom Fischerom.\nOd 2006 je projekt otvoreny a vyvyijany zmenami vyvojarov.
 # About window from Top menu Help->About:  Text
 window.about.licence = Licencia
 ls.button.update.linux.pkg.warning = Mas spuste HO skrz balik instalovany v tvojom systeme. Ak budes aktualizovat HO skrz toto rozhranie, tvoj system ta nebude informovat o aktualizaciach programu. \nTym padom bude existovat nesulad medzi verziou HO vykazovanou v tvojom systeme a tou skutocne nainstalovanou a pouzivanou (pokial nie je pozadovane nove Java rozhranie, vtedy tvoj system nebude automaticky aktualizovany).\nToto by vsak nemalo mat ziadne nasledky a v pripade problemu vzdy budes mat moznost instalovat/aktualizovat HO cez tvoju existujuci instalaciu pouzitim balicka. \nChces pokracovat
