--- a/src/main/resources/sprache/Spanish.properties
+++ b/src/main/resources/sprache/Spanish.properties
@@ -1426,7 +1426,7 @@ ls.menu.help.about = Acerca
 # About window from Top menu Help->About:  Title
 window.about.title = Créditos
 # About window from Top menu Help->About:  Text
-window.about.text = El desarrollo empezó en 2003 por parte de Thomas Werth & Volker Fischer. Desde 2006, este proyecto es de código abierto y desarrollado por diferentes desarrolladores.
+window.about.text = El desarrollo empezó en 2003 por parte de Thomas Werth & Volker Fischer.\nDesde 2006, este proyecto es de código abierto y desarrollado por diferentes desarrolladores.
 # About window from Top menu Help->About:  Text
 window.about.licence = Licencia
 ls.button.update.linux.pkg.warning = Estás ejecutando HO a través de un paquete instalado en tu sistema. Si actualizas HO a través de esta interfaz, tu sistema no será informado de la actualización del programa. \nPor tanto, existirá una discrepancia entre la versión de HO informada por tu sistema y la que efectivamente está instalada y en uso (en el caso que haga falta una nueva dependencia de Java, tu sistema no la instalará automáticamente).\nNo obstante, esto no debería tener consecuencias y en caso de problemas siempre tendrás la posibilidad de instalar/actualizar HO encima de la instalación existente usando un paquete.\nAún quieres continuar?
