--- a/.github/workflows/release-dev.yml
+++ b/.github/workflows/release-dev.yml
@@ -94,10 +94,16 @@ jobs:
           body_path: docs/md/release_notes.md
           target_commitish: ${{ steps.read_version_properties.outputs.branch }}
           prerelease: ${{ steps.read_version_properties.outputs.tag != 'tag_stable' }}
-      - name: If 'tag_stable' release, also create 'stable' tag
+      - name: Create `stable` release if `tag_stable` release
         if: ${{ steps.read_version_properties.outputs.tag == 'tag_stable' }}
-        uses: rickstaa/action-create-tag@v1.7.2
+        uses: softprops/action-gh-release@v2
+        env:
+          GITHUB_TOKEN: ${{ secrets.RELEASE_TOKEN }}
         with:
-          tag: stable
-          tag_exists_error: false
-          force_push_tag: true
+          files: |
+            build/artefacts/**
+          name: ${{ steps.read_version_properties.outputs.version }}
+          tag_name: stable
+          body_path: docs/md/release_notes.md
+          target_commitish: ${{ steps.read_version_properties.outputs.branch }}
+          prerelease: false
