--- a/build.gradle
+++ b/build.gradle
@@ -65,6 +65,7 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
     testImplementation "org.junit.jupiter:junit-jupiter:5.10.2"
     testImplementation "org.assertj:assertj-core:3.26.3"
+    testImplementation "org.jetbrains.kotlin:kotlin-test:1.9.21"
 }
 
 test {
