--- a/build.gradle
+++ b/build.gradle
@@ -63,6 +63,7 @@ dependencies {
     implementation "org.jetbrains:annotations:26.0.2"
     implementation "org.codehaus.groovy:groovy-all:3.0.24"
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
+    implementation "org.jetbrains.kotlinx:kandy-lets-plot:0.8.0"
     testImplementation "org.junit.jupiter:junit-jupiter:5.13.0-M1"
     testImplementation "org.assertj:assertj-core:3.26.3"
     testImplementation "org.jetbrains.kotlin:kotlin-test:2.1.20"
