--- a/.github/workflows/release-dev.yml
+++ b/.github/workflows/release-dev.yml
@@ -24,11 +24,11 @@ jobs:
       - name: Validate Gradle wrapper
         uses: gradle/actions/wrapper-validation@v4
       - name: Download and install install4j
-        run: wget https://download-gcdn.ej-technologies.com/install4j/install4j_linux-x64_10_0_6.deb && sudo dpkg -i install4j_linux-x64_10_0_6.deb
+        run: wget https://download.ej-technologies.com/install4j/install4j_linux-x64_12_0_2.deb && sudo dpkg -i install4j_linux-x64_12_0_2.deb
       - name: Build with Gradle
         run: ./gradlew release
         env:
-          INSTALL4J_HOME: /opt/install4j10
+          INSTALL4J_HOME: /opt/install4j12
           INSTALL4J_LICENSE: ${{ secrets.INSTALL4J_LICENSE }}
           POEDITOR_APIKEY: ${{ secrets.POEDITOR_APIKEY }}
           RUN_NUMBER: ${{ github.run_number }}
