--- a/build.gradle
+++ b/build.gradle
@@ -294,19 +294,21 @@ tasks.register("media", Install4jTask) {
 
     buildIds = ["60", "485", "64", "481", "1225", "1224", "173", "477", "1062", "1064", "1203", "1206", "1208", "1211"]
 
-    variables = [HO_version: project.version, projectDir: projectDir, versionType: project.ext.version_type]
-//    doFirst {
-//        // Ensures that the project.version used for HO_version
-//        // is the expanded version computed in `createVersion` task.
-//        var mediaTask = tasks.findByName("media") as Install4jTask
-//        mediaTask.configure {
-//            variables.HO_version = project.version
-//        }
-//    }
-
-    doFirst{
-        println "HO_version: $project.version ....................."
+//    variables = [HO_version: project.version, projectDir: projectDir, versionType: project.ext.version_type]
+    doFirst {
+        // Ensures that the project.version used for HO_version
+        // is the expanded version computed in `createVersion` task.
+        var mediaTask = tasks.findByName("media") as Install4jTask
+        mediaTask.configure {
+            variables.HO_version = project.version
+            variables.projectDir = projectDir
+            variables.versionType= project.ext.version_type
+        }
     }
+//
+//    doFirst{
+//        println "HO_version: $project.version ....................."
+//    }
 }
 
 tasks.register("makeAllMedias") {
