--- a/build.gradle
+++ b/build.gradle
@@ -47,6 +47,7 @@ repositories {
 
 dependencies {
     implementation "com.install4j:install4j-runtime:12.0"
+    implementation "com.fasterxml.jackson.core:jackson-core:2.21.0"
     implementation "com.github.scribejava:scribejava-core:8.3.3"
     implementation "org.hsqldb:hsqldb:2.7.4"
     implementation "com.google.code.gson:gson:2.12.1"
@@ -57,13 +58,13 @@ dependencies {
     implementation "com.github.weisj:darklaf-theme:3.0.2"
     implementation "com.github.weisj:darklaf-property-loader:3.0.2"
     implementation "org.javatuples:javatuples:1.2"
-    implementation "org.apache.commons:commons-text:1.13.0"
+    implementation "org.apache.commons:commons-text:1.15.0"
     implementation "org.knowm.xchart:xchart:3.8.8"
     implementation "org.jsoup:jsoup:1.19.1"
     implementation "org.jetbrains:annotations:26.0.2"
     implementation "org.codehaus.groovy:groovy-all:3.0.24"
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
-    testImplementation "org.junit.jupiter:junit-jupiter:5.13.0-M1"
+    testImplementation "org.junit.jupiter:junit-jupiter:5.14.2"
     testImplementation "org.assertj:assertj-core:3.26.3"
     testImplementation "org.jetbrains.kotlin:kotlin-test:2.1.20"
 }
