--- a/buildSrc/build.gradle
+++ b/buildSrc/build.gradle
@@ -1,44 +1,44 @@
 plugins {
-  id 'com.palantir.git-version' version '3.0.0'
+  id 'com.palantir.git-version' version '4.2.0'
   id 'java-gradle-plugin'
-  id 'com.gradle.plugin-publish' version '0.15.0'
-  id 'org.jetbrains.kotlin.jvm' version '1.9.21'
+  id 'com.gradle.plugin-publish' version '2.0.0'
+  id 'org.jetbrains.kotlin.jvm' version '2.2.0'
 }
 
 description = 'Gradle POEditor Plugin'
 group = 'de.jansauer.poeditor'
-version = '1.2.0'
+version = '2.0.0'
 
 
 repositories {
   mavenCentral()
-  maven { url = "https://jcenter.bintray.com/"}
 }
 
 dependencies {
-  implementation("com.squareup.okhttp3:okhttp:4.11.0")
-  implementation 'com.fasterxml.jackson.core:jackson-databind:2.16.0'
-  implementation 'com.fasterxml.jackson.core:jackson-core:2.16.0'
+  implementation("com.squareup.okhttp3:okhttp:4.12.0")
+  implementation 'com.fasterxml.jackson.core:jackson-databind:2.21.0'
+  implementation 'com.fasterxml.jackson.core:jackson-core:2.21.0'
 
   testImplementation('org.spockframework:spock-core:1.3-groovy-2.5') {
     exclude(module: 'groovy-all')
   }
-  implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
+  implementation "org.jetbrains.kotlin:kotlin-stdlib:2.3.0"
 }
 
-pluginBundle {
+kotlin {
+    jvmToolchain(17)
+}
+
+gradlePlugin {
   website = 'https://github.com/jansauer/gradle-poeditor-plugin'
   vcsUrl = 'https://github.com/jansauer/gradle-poeditor-plugin'
   description = 'Gradle POEditor Plugin.'
-  tags = ['i18n', 'poeditor', 'translation', 'terms', 'gitlab', 'angular']
 
   plugins {
     poeditorPlugin {
       id = 'de.jansauer.poeditor'
       displayName = 'Gradle POEditor Plugin'
+      implementationClass = 'de.jansauer.poeditor.POEditorPlugin'
     }
   }
-}
-kotlin {
-  jvmToolchain(8)
 }
